# runanywhere-sdks

./: Package.resolved  Package.swift  wisprFlow_clone_plan.md
Playground/YapRun/: mac_plan.md
Playground/YapRun/YapRun/: ContentView.swift  YapRun.entitlements  YapRunApp.swift
Playground/YapRun/YapRun.xcodeproj/: project.pbxproj
Playground/YapRun/YapRun.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Playground/YapRun/YapRun/Core/: AppColors.swift  AppTypes.swift  ModelRegistry.swift
Playground/YapRun/YapRun/Features/Home/: AddModelURLSheet.swift  HomeViewModel.swift  ModelCardView.swift
Playground/YapRun/YapRun/Features/Notepad/: NotepadView.swift
Playground/YapRun/YapRun/Features/Onboarding/: OnboardingView.swift  OnboardingViewModel.swift
Playground/YapRun/YapRun/Features/Onboarding/Steps/: KeyboardSetupStepView.swift  MicPermissionStepView.swift  ModelDownloadStepView.swift  WelcomeStepView.swift
Playground/YapRun/YapRun/Features/Playground/: PlaygroundView.swift  PlaygroundViewModel.swift
Playground/YapRun/YapRun/Features/VoiceKeyboard/: FlowActivationView.swift  FlowSessionManager.swift
Playground/YapRun/YapRun/Shared/: SharedConstants.swift  SharedDataBridge.swift
Playground/YapRun/YapRun/macOS/: MacAppDelegate.swift
Playground/YapRun/YapRun/macOS/Features/: FlowBarView.swift  MacHomeView.swift  MacHubView.swift  MacNotepadView.swift  MacPlaygroundView.swift  MacSettingsView.swift
Playground/YapRun/YapRun/macOS/Features/Onboarding/: AccessibilityStepView.swift  MacMicPermissionStepView.swift  MacModelDownloadStepView.swift  MacOnboardingView.swift  MacWelcomeStepView.swift
Playground/YapRun/YapRun/macOS/Services/: MacDictationService.swift
Playground/YapRun/YapRunActivity/: YapRunActivityLiveActivity.swift
Playground/YapRun/YapRunKeyboard/: KeyboardView.swift  KeyboardViewController.swift  SharedConstants.swift
examples/ios/RunAnywhereAI/: Package.resolved
examples/ios/RunAnywhereAI/RunAnywhereAI/: Info.plist  RunAnywhereAI.entitlements
examples/ios/RunAnywhereAI/RunAnywhereAI.xcodeproj/: project.pbxproj
examples/ios/RunAnywhereAI/RunAnywhereAI.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
examples/ios/RunAnywhereAI/RunAnywhereAI/App/: ContentView.swift  RunAnywhereAIApp.swift
examples/ios/RunAnywhereAI/RunAnywhereAI/Features/VoiceKeyboard/: DictationActivityAttributes.swift  FlowActivationView.swift  FlowSessionManager.swift  VoiceDictationManagementView.swift
examples/ios/RunAnywhereAI/RunAnywhereAI/Shared/: SharedConstants.swift  SharedDataBridge.swift
examples/ios/RunAnywhereAI/RunAnywhereActivityExtension/: RunAnywhereActivityExtensionLiveActivity.swift
examples/ios/RunAnywhereAI/RunAnywhereKeyboard/: KeyboardView.swift  KeyboardViewController.swift
examples/ios/RunAnywhereAI/scripts/: build_and_run_ios_sample.sh  patch-framework-plist.sh
examples/web/RunAnywhereAI/: package-lock.json  package.json  vite.config.ts
examples/web/RunAnywhereAI/src/services/: model-manager.ts
examples/web/RunAnywhereAI/src/views/: speak.ts  transcribe.ts
gradle/wrapper/: gradle-wrapper.properties
sdk/runanywhere-commons/: VERSIONS
sdk/runanywhere-commons/exports/: RACommons.exports
sdk/runanywhere-commons/include/rac/infrastructure/model_management/: rac_model_types.h
sdk/runanywhere-commons/scripts/: build-ios.sh
sdk/runanywhere-commons/src/backends/onnx/: CMakeLists.txt  rac_backend_onnx_register.cpp
sdk/runanywhere-commons/src/features/llm/: llm_component.cpp
sdk/runanywhere-commons/src/features/stt/: rac_stt_service.cpp  stt_component.cpp
sdk/runanywhere-commons/src/infrastructure/model_management/: model_paths.cpp  model_registry.cpp  model_types.cpp
sdk/runanywhere-commons/src/infrastructure/telemetry/: telemetry_manager.cpp
sdk/runanywhere-commons/src/jni/: runanywhere_commons_jni.cpp
sdk/runanywhere-commons/tests/: CMakeLists.txt
sdk/runanywhere-swift/Sources/RunAnywhere/CRACommons/include/: rac_model_types.h
sdk/runanywhere-swift/Sources/RunAnywhere/Features/STT/Services/: AudioCaptureManager.swift
sdk/runanywhere-swift/Sources/RunAnywhere/Foundation/Bridge/Extensions/: ModelTypes+CppBridge.swift
sdk/runanywhere-swift/Sources/WhisperKitRuntime/: WhisperKitSTT.swift  WhisperKitSTTService.swift
sdk/runanywhere-swift/scripts/: create-onnxruntime-xcframework.sh
sdk/runanywhere-web/: README.md  package.json
(+4 files in other folders)
